# CellularAutomata

./: README.md
ElementaryCA/: CMakeLists.txt  ElementaryCA.cpp  ElementaryCA.h  main.cpp
GameOfLife/: cell.py  flotilla.txt  fly.txt  fountain.txt  fx119.txt  fx176.txt  glider_pusher.txt  spaceship.txt
